syntax="proto2";
package gsp;
option java_package="com.gproject.common.dto.proto";
option java_outer_classname="RoomDTO";


//创建房间
message C2SCreateRoom{
   required int32 roomType=1;
}
//房间信息
message S2CRoomInfo{


}

enum RoomOpCode{
  join=1;
  exit=2;
  start=3;//开始匹配
  stop=4;//停止
}

message GPlayerInfo{
  required int64 playerId=1;
}

message C2SRoomOps{
  required RoomOpCode opCode=1;
  optional int64  playerId=2;
  required string roomId=3;
  optional GPlayerInfo info=4;
}

